--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -141,7 +141,7 @@
 
             var contenido = document.querySelector('#CuerpoCanciones') 
             contenido.innerHTML = ""
-            fetch('http://localhost:3000/cancion')
+            fetch('http://0.0.0.0:5000/cancion')
             .then(response => response.json())
             .catch(error => {
             console.log(error)
