--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
                 'video': video       
              }
             console.log(objeto)
-            fetch('http://0.0.0.0:5000/cancion', {
+            fetch('https://proyecto2-ipc1.herokuapp.com/cancion', {
             method: 'POST',
             body: JSON.stringify(objeto),
             headers:{
@@ -226,7 +226,7 @@
 
             var contenido = document.querySelector('#CuerpoCanciones') 
             contenido.innerHTML = ""
-            fetch('http://0.0.0.0:5000/cancion')
+            fetch('https://proyecto2-ipc1.herokuapp.com/cancion')
             .then(response => response.json())
             .catch(error => {
             console.log(error)
